# media-transcriber

./: .gitignore  README.md  config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  transcribe_batch.py  tsconfig.json  tsup.config.ts
lib/: __init__.py  audio_converter.py  audio_enhancer.py  audio_splitter.py  transcript_merger.py  whisper_transcriber.py
src/: index.ts  version.ts
src/backends/: registry.ts  types.ts  whisper-api.ts  whisper-local.ts
src/cli/commands/: config.ts  doctor.ts  setup.ts  transcribe.ts
src/config/: loader.ts  presets.test.ts  presets.ts  schema.test.ts  schema.ts
src/output/: formatter.test.ts  formatter.ts  progress.ts
src/pipeline/: audio-converter.ts  audio-enhancer.ts  audio-splitter.ts  orchestrator.test.ts  orchestrator.ts  transcript-merger.test.ts  transcript-merger.ts
src/types/: index.ts
